# espnet

./: .gitignore  404.html  about_this_doc.html  additional_citations.html  citations.html  docker.html  document.html  espnet1_tutorial.html  espnet2_distributed.html  espnet2_format_wav_scp.html  espnet2_task.html  espnet2_training_option.html  espnet2_tutorial.html  faq.html  index.html  installation.html  notebooks.html  parallelization.html  pyproject.toml  searchindex.js  setup.cfg  setup.py  test.py  tutorial.html
.devcontainer/: postcreated3.sh
.devcontainer/espnet3_cpu/: devcontainer.json
.devcontainer/espnet3_gpu/: devcontainer.json
.doctrees/apis/: utils_py.doctree
.doctrees/notebook/: espnet2_recipe_tutorial_CMU_11751_18781_Fall2022.doctree
.github/workflows/: ci_on_debian11.yml  ci_on_debian11.yml.eol  ci_on_ubuntu.yml
apis/: utils_py.html
ci/: install.sh  test_configuration_espnet2.sh  test_flake8.sh  test_integration_espnet2.sh  test_integration_espnet3.sh  test_python_espnet1.sh  test_python_espnet2.sh  test_python_espnet3.sh  test_python_espnetez.sh  test_shell_espnet3.sh
doc/espnet3/: callbacks.md  data_preparation.md  dataset.md  evaluate.md  multiple_gpu.md  optimizer_configuration.md  parallel.md  provider_runner.md  system_design.md
docker/: build3.sh
docker/prebuilt/: devel3.dockerfile
egs3/: config.yaml  create_dataset.py  train.py
espnet2/lm/: transformer_lm.py
espnet2/samplers/: build_batch_sampler.py
espnet2/tasks/: abs_task.py
espnet2/train/: collate_fn.py
espnet3/: collect_stats.py
espnet3/data/: dataset.py  huggingface_utils.py
espnet3/inference/: __init__.py  inference_runner.py  score_runner.py
espnet3/preprocess/: sentencepiece.py
espnet3/runner/: __init__.py  base.py  inference.py  score.py
espnet3/trainer/: dataloader.py  hybrid_scheduler.py  model.py
espnet3/utils/: logging.py
guide/: index.html
guide/espnet/: index.html
guide/espnet2/: index.html
guide/espnetez/: index.html
notebook/: espnet2_recipe_tutorial_CMU_11751_18781_Fall2022.html  index.html
notebook/ESPnet1/: asr_library.html  asr_recipe.html  index.html  pretrained.html  st_demo.html  tts_realtime_demo.html  tts_recipe.html
notebook/ESPnet2/: index.html
notebook/ESPnetEZ/: index.html
recipe/: asr1.html  asr2.html  asvspoof1.html  cls1.html  codec1.html  diar1.html  enh1.html  enh_asr1.html  enh_diar1.html  enh_st1.html  hubert1.html  index.html  lm1.html  mt1.html  s2st1.html  s2t1.html  sds1.html  slu1.html  speechlm1.html  spk1.html  ssl1.html  st1.html  svs1.html  tts1.html  tts2.html  uasr1.html
test/espnet3/: test_collect_stats.py  test_data_organizer.py  test_inference_runner.py  test_integration_espnet3_ft.py  test_parallel.py  test_trainer.py
tools/: Makefile  index.html
tools/espnet2_bin/: aggregate_stats_dirs.html  asr_align.html  asr_inference.html  asr_inference_maskctc.html  asr_inference_streaming.html  asr_transducer_inference.html  asvspoof_inference.html  cls_inference.html  diar_inference.html  enh_inference.html  enh_inference_streaming.html  enh_scoring.html  enh_tse_inference.html  gan_codec_inference.html  hugging_face_export_vocabulary.html  index.html  launch.html  lm_calc_perplexity.html  lm_inference.html  mt_inference.html  pack.html  s2st_inference.html  s2t_ctc_align.html  s2t_inference.html  s2t_inference_ctc.html  s2t_inference_language.html  slu_inference.html  split_scps.html  (+13 more)
(+2002 files in other folders)
