[project]
name = "espnet"
dynamic = ["version", "readme"]
authors = [
    {name="Shinji Watanabe", email="shinjiw@ieee.org"}
]
description = "ESPnet: end-to-end speech processing toolkit"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
license = { "text" = "Apache Software License" }
dependencies = [
    "setuptools>70.0.0",
    "configargparse>=1.2.1",
    "packaging",
    "typeguard",
    "humanfriendly",
    "g2p_en",
    "scipy>=1.4.1",
    "filelock",
    "librosa>0.9.2",
    "torch>=2.6.0",
    "jamo",  # For kss
    "PyYAML>=5.1.2",
    "soundfile>=0.10.2",
    "h5py>=2.10.0",
    "kaldiio>=2.18.0",
    "torch_complex",
    "nltk>=3.4.5",
    "numpy",
    "protobuf",
    "hydra-core",
    "opt-einsum",
    "lightning",
    "lhotse",
    # ASR
    "sentencepiece==0.2.0",
    "ctc-segmentation>=1.6.6",
    # TTS
    "pyworld>=0.3.4",
    "espnet_tts_frontend",
    # ENH
    "ci_sdr",
    "fast-bss-eval==0.1.3",
    # SPK
    "asteroid_filterbanks==0.4.0",
    # UASR
    "editdistance",
    "importlib-metadata<5.0",
]

[project.urls]
Homepage = "http://github.com/espnet/espnet"

[build-system]
requires = ["setuptools>=70.0.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "espnet.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["espnet*"]

[tool.setuptools.package-data]
espnet = ["version.txt"]

[project.optional-dependencies]
train = [
    "matplotlib",
    "pillow==9.5.0",
    "wandb",
    "tensorboard>=1.14",
    "dask-jobqueue",
]
recipe = [
    "espnet_model_zoo",
    "gdown",
    "resampy",
    "morfessor",  # for zeroth-korean # "pysptk>=0.2.1",
    "youtube_dl",  # for laborotv
    "nnmnkwii",
    "museval>=0.2.1",
    "pystoi>=0.2.2",
    "mir-eval>=0.6",
    "fastdtw",
    "nara_wpe>=0.0.5",
    "sacrebleu>=1.5.1",
    "praatio>=6,<7",  # for librispeech phoneme alignment
    "scikit-learn>=1.0.0",  # for HuBERT kmeans
]

setup = [
    "pytest-runner",
]

test = [
    "pytest>=7.0.0",
    "pytest-timeouts>=1.2.1",
    "pytest-pythonpath>=0.7.3",
    "pytest-cov>=2.7.1",
    "hacking>=2.0.0",
    "mock>=2.0.0",
    "pycodestyle",
    "jsondiff>=2.0.0",
    "flake8>=3.7.8",
    "flake8-docstrings>=1.3.1",
    "black",
    "isort",
    "espnet[train]",
]

doc = [
    "Jinja2<3.1",
    "sphinx<9.0.0",
    "sphinx-rtd-theme>=0.2.4",
    "sphinx-argparse>=0.2.5",
    "commonmark==0.8.1",
    "myst-parser",
    "nbsphinx>=0.4.2",
    "sphinx-markdown-tables>=0.0.12",
    "jupyterlab<5",
    "sphinx-markdown-builder",
]

all = [
    "dask[complete]",
    "torchaudio",
    "torch_optimizer",
    "fairscale",
    "transformers",
    "evaluate",
    "espnet[train]",
    "espnet[recipe]",
]
